--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -4,47 +4,44 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/config-plugins": "7.2.2",
-    "expo-constants": "~14.4.2",
+    "@changesets/cli": "^2.26.2",
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~48.0.11",
-    "expo-font": "~11.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-router": "^1.5.2",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
-    "expo-system-ui": "~2.2.1",
-    "expo-web-browser": "~12.1.1",
-    "nativewind": "^2.0.11",
+    "expo": "~51.0.37",
+    "expo-font": "~12.0.9",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
+    "expo-screen-orientation": "~7.0.5",
+    "expo-splash-screen": "~0.27.6",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
+    "nativewind": "4.1.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.7",
-    "react-native-paper": "^5.6.0",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native": "0.75.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.6",
+    "tailwindcss": "3.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.45",
     "jest": "^29.2.1",
-    "jest-expo": "~48.0.0",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "^4.9.4"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
