--- a/thi-app/tsconfig.json
+++ b/thi-app/tsconfig.json
@@ -3,11 +3,13 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "preserve",
+    "types": ["react", "react-native"],
     "paths": {
       "@/*": [
         "./*"
       ]
     }
+    
   },
   "include": [
     "**/*.ts",
