--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "tsc && node ./dist/app.js",
-    "dev": "npx nodemon app.ts"
+    "dev": "npx nodemon app.ts",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -21,10 +22,19 @@
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@types/express": "^5.0.0",
     "@types/joi": "^17.2.2",
     "@types/node": "^22.7.7",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0"
   }
 }
