--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-status-codes": "^2.3.0",
-    "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
