--- a/thi-app/tsconfig.json
+++ b/thi-app/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "preserve",
+    "types": ["react", "react-native"],
     "paths": {
       "@/*": [
         "./*"
