--- a/thi-app/app.json
+++ b/thi-app/app.json
@@ -4,7 +4,7 @@
     "slug": "thi-app",
     "version": "1.0.0",
     "orientation": "landscape",
-    "icon": "./assets/images/icon.png",
+    "icon": "@/assets/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
