--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -20,9 +20,9 @@
     "expo": "^52.0.7",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.5",
+    "expo-router": "^4.0.6",
     "expo-screen-orientation": "~8.0.0",
-    "expo-splash-screen": "~0.29.10",
+    "expo-splash-screen": "^0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
@@ -33,7 +33,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "^4.1.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "3.4.4"
   },
@@ -41,7 +41,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
     "jest": "~29.7.0",
-    "jest-expo": "~52.0.1",
+    "jest-expo": "^52.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
