--- a/thi-app/app.json
+++ b/thi-app/app.json
@@ -36,14 +36,18 @@
     },
     "plugins": [
       "expo-router",
-      "expo-font",
+      [
+        "expo-font",
+        {
+          "fonts": ["./assets/fonts/Jost-VariableFont_wght.tff"]
+        }
+      ],
       [
         "expo-screen-orientation",
         {
           "initialOrientation": "LANDSCAPE_LEFT"
         }
-      ],
-      "expo-font"
+      ]
     ],
     "experiments": {
       "tsconfigPaths": true,
