--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -42,6 +42,7 @@
     "@types/react": "~18.3.12",
     "jest": "~29.7.0",
     "jest-expo": "~52.0.1",
+    "prettier": "3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
