--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -15,8 +15,9 @@
     "@changesets/cli": "^2.26.2",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^7.0.3",
-    "@react-navigation/native": "^7.0.2",
+    "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.0.2",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "^52.0.7",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
@@ -32,7 +33,7 @@
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "3.4.4"
