--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-status-codes": "^2.3.0",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.7.3",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
