--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,10 @@
     "http-status-codes": "^2.3.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "resend": "^4.1.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
