--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.0.3",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/native-stack": "^7.0.2",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.7",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
@@ -30,16 +31,19 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-big-calendar": "^4.17.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "3.4.4"
+    "tailwindcss": "3.4.4",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "jest": "~29.7.0",
     "jest-expo": "~52.0.1",
     "react-test-renderer": "18.2.0",
