--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -26,9 +26,9 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
-    "nativewind": "4.1.21",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "nativewind": "^4.1.21",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
