resend version update

--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "resend": "^4.0.1-alpha.0"
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
