--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@changesets/cli": "^2.26.2",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.0.3",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/native-stack": "^7.0.2",
@@ -32,13 +33,13 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-big-calendar": "^4.17.1",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "3.4.4",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "tailwindcss": "3.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
