--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -36,7 +36,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "3.4.4"
+    "tailwindcss": "3.4.4",
+    "expo-secure-store": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
