--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "jest": "~29.7.0",
     "jest-expo": "~52.0.1",
     "react-test-renderer": "18.2.0",
