--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "thi-app",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "dependencies": {
-    "@changesets/cli": "^2.26.2",
-    "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/bottom-tabs": "^7.0.3",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.0.2",
-    "@react-navigation/stack": "^7.1.1",
-    "expo": "^52.0.7",
-    "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.5",
-    "expo-screen-orientation": "~8.0.0",
-    "expo-splash-screen": "~0.29.10",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.3",
-    "expo-web-browser": "~14.0.1",
-    "express": "^4.21.2",
-    "nativewind": "4.1.21",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.2",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.0.0",
-    "react-native-web": "~0.19.6",
-    "tailwindcss": "3.4.4",
-    "expo-secure-store": "~14.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
-    "@types/react-native": "^0.72.8",
-    "jest": "~29.7.0",
-    "jest-expo": "~52.0.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
-  },
-  "private": true
+    "name": "thi-app",
+    "main": "expo-router/entry",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
+        "web": "expo start --web"
+    },
+    "jest": {
+        "preset": "jest-expo"
+    },
+    "dependencies": {
+        "@changesets/cli": "^2.26.2",
+        "@expo/vector-icons": "^14.0.0",
+        "@react-navigation/bottom-tabs": "^7.0.3",
+        "@react-navigation/native": "^7.0.14",
+        "@react-navigation/native-stack": "^7.0.2",
+        "@react-navigation/stack": "^7.1.1",
+        "expo": "^52.0.7",
+        "expo-font": "~13.0.1",
+        "expo-linking": "~7.0.2",
+        "expo-router": "~4.0.5",
+        "expo-screen-orientation": "~8.0.0",
+        "expo-secure-store": "~14.0.1",
+        "expo-splash-screen": "~0.29.10",
+        "expo-status-bar": "~2.0.0",
+        "expo-system-ui": "~4.0.3",
+        "expo-web-browser": "~14.0.1",
+        "express": "^4.21.2",
+        "nativewind": "4.1.21",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "react-dropzone": "^14.3.8",
+        "react-native": "0.76.2",
+        "react-native-gesture-handler": "~2.20.2",
+        "react-native-reanimated": "~3.16.1",
+        "react-native-safe-area-context": "^4.12.0",
+        "react-native-screens": "~4.0.0",
+        "react-native-web": "~0.19.6",
+        "tailwindcss": "3.4.4"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0",
+        "@types/react": "~18.3.12",
+        "@types/react-native": "^0.72.8",
+        "jest": "~29.7.0",
+        "jest-expo": "~52.0.1",
+        "react-test-renderer": "18.2.0",
+        "typescript": "~5.3.3"
+    },
+    "private": true
 }
