--- a/thi-app/package.json
+++ b/thi-app/package.json
@@ -32,7 +32,9 @@
     "nativewind": "4.1.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-native": "^0.76.9",
+    "react-native-draggable-flatlist": "^4.0.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
